manifests/gateway-default/frontend-europe-west1.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-europe-west1
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
