manifests/gateway-default/httproute.yaml
apiVersion: networking.x-k8s.io/v1alpha1
kind: HTTPRoute
metadata:
  name: front-route
  labels:
    gateway: external-http
spec:
  hostnames:
  - "*"
  rules:
  - forwardTo:
    - backendRef:
        group: net.gke.io
        kind: ServiceImport
        name: frontend
      port: 80
    filters:
    - type: RequestMirror
      requestMirror:
        backendRef:
          group: net.gke.io
          kind: ServiceImport
          name: frontend-europe-west1
        port: 80
